--- a/config/database.yml
+++ b/config/database.yml
@@ -4,14 +4,11 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: postgresql
-  encoding: unicode
-  username: postgres
-  password: starbucks
-  database: app_dev
-  host: localhost
-  port: 5432
-  
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
